INDEX what whaaaaat

--- a/index.html
+++ b/index.html
@@ -29,25 +29,14 @@
 
   <body>
 
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
 
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="http://caseymonahan.github.io/Portfolio/">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
 
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
         <h1>Casey Monahan</h1>
+        caseymariemonahan@gmail.com
       </div>
     </div>
 
@@ -58,40 +47,43 @@
           <h2>Projects</h2>
         </div>
       </div>
-      
+
       <div class="row">
         <a href="ipd.html">
           <div class="col-md-4" >
-            <img style="width:90%"  align="middle" src="images/ipd/problemsolution.png"> 
-            <h3>Clothing storage for freshness</h3>
+            <img style="width:90%"  align="middle" src="images/ipd/indexpic.png"> 
+            <h4>Clothing Storage for Freshness</h4>
           </div>
         </a>
         <a href="energy.html">
           <div class="col-md-4" >
             <img style="width:90%"  align="middle" src="images/energy/windmillolin.jpg"> 
-            <h3>Local electricity systems in Uganda</h3>
+            <h4>Local Electricity Systems in Uganda</h4>
           </div>
         </a>
          <a href="hfid.html">
           <div class="col-md-4" >
-            <img style="width:90%"  align="middle" src="images/hfid/smallwireframe.png"> 
-            <h3>Effortless money saving on groceries</h3>
+            <img style="width:90%"  align="middle" src="images/hfid/smallestwireframe.png"> 
+            <h4>Effortless Money Saving on Groceries</h4>
           </div>
         </div>
         <hr></hr>
         <div class="row">
         </a>
-        <a href="art.html">
           <div class="col-md-4" >
             <h2>Artwork</h2>
-            <img style="width:90%"  align="middle" src="images/art/a.jpg"> 
+            <a href="art.html">
+              <img style="width:90%"  align="middle" src="images/art/a.jpg"> 
+            </a>
           </div>
-        </a>
+        
         <div class "col-md-1">
         </div>
           <div class="col-md-7" >
             <h2>About Casey</h2>
             <p>Casey is an engineer, designer, and environmentalist living in New York. She graduated from Olin College in December 2014 where she majored in Sustainable Design Engineering, with a humanities concentration in printmaking. She enjoys vegetarian cooking and playing rugby.</p>
+            <p>Casey is looking for employment in sustainability or design in Boston and New York City.</p>
+            <p>Get in touch with Casey at caseymariemonahan@gmail.com</p>
           </div>
         </div>
       </div>
@@ -99,8 +91,12 @@
       <hr>
 
       <footer>
-        <p>&copy; Casey Monahan 2014</p>
-        <p>This site is under construction, please pardon the mess</p>
+        <div class="container">
+          <div class="row">
+          <p>&copy; Casey Monahan 2014</p>
+          <p>This site is under construction, please pardon the mess</p>
+        </div>
+        </div>
       </footer>
     </div> <!-- /container -->
 
