--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="row">
         <a href="ipd.html">
           <div class="col-md-4" >
-            <img style="width:90%"  align="middle" src="images/ipd/indexpic.png"> 
+            <img style="width:90%" src="images/ipd/mainpic.png"> 
             <h4>Clothing Storage for Freshness</h4>
           </div>
         </a>
