--- a/art.html
+++ b/art.html
@@ -28,6 +28,18 @@
 
   <body>
 
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="http://caseymonahan.github.io/Portfolio/">Casey Monahan - Home</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
     <div class="jumbotron">
       <div class="container">
 
@@ -45,38 +57,28 @@
           <img style="width:90%"  align="middle" src="images/art/b.jpg"> 
         </div>
       </div>
-        <hr></hr>
-      <div class="row">
-        <div class="col-md-12">
-          <img style="width:50%"  align="middle" src="images/art/d.jpg"> 
-        </div>
-      </div>
-      </div>
-        <hr></hr>
-        <div class="row">
-        <div class="col-md-12">
-          <img style="width:50%"  align="middle" src="images/art/f.jpg"> 
-        </div>
-        </div>
-        <hr></hr>
-        <div class="row">
-        <div class="col-md-12">
-          <img style="width:50%"  align="middle" src="images/art/g.jpg"> 
-        </div>
-        </div>
-        <hr></hr>
-        <div class="row">
-        <div class="col-md-12">
-          <img style="width:50%"  align="middle" src="images/art/i.jpg"> 
-        </div>
-        </div>
-        <hr></hr>
-        <div class="row">
-        <div class="col-md-12">
-          <img style="width:50%"  align="middle" src="images/art/k.jpg"> 
-        </div>
-        </div>
 
+        <hr></hr>
+
+      <div class="row">
+        <div class="col-md-6">
+          <img style="width:80%"  align="middle" src="images/art/d.jpg"> 
+        </div>
+        <div class="col-md-6">
+          <img style="width:80%"  align="middle" src="images/art/f.jpg"> 
+        </div>
+      </div>  
+        <hr></hr>
+
+
+        <div class="row">
+          <div class="col-md-6">
+            <img style="width:80%"  align="middle" src="images/art/g.jpg"> 
+          </div>
+          <div class="col-md-6">
+            <img style="width:80%"  align="middle" src="images/art/i.jpg"> 
+          </div>
+        </div>
 
         <hr></hr>
         <div class="row">
