--- a/hfid.html
+++ b/hfid.html
@@ -69,7 +69,7 @@
              <p>A busy mom has no time to search for and clip coupons, but appreciates a good deal. She will occasionally buy discounted items but only if she thinks the item is going to keep her family happy and healthy. She would love to save more on groceries but doesn’t want to spend more effort on this chore.</p>
              </div>
           <div class="col-md-4">            
-            <h3>Iterative Design</h3>
+            <h3>Personas</h3>
             <p>The ideas was proposed as a sort of suit bag that treated clothing to reduce smell</p>
             <p>One of our intermediate designs combined a dirty laundry hamper with a once-worn clothing container that included a UV light to kill smell-causing bacteria.</p>
             <p>The final prototype eliminated UV light in order to keep the system energy passive and more user-friendly. Hangs over closet door to move clothes away from the floor, which is perceived as a place for dirty clothes. We built both a looks-like prototype shown here, as well as a works-like protoype that used silica gel to absorb moisture and activated charcoal to reduce semell.</p>
