--- a/hfid.html
+++ b/hfid.html
@@ -51,40 +51,41 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-8">
-          <img style="width:90%"  align="middle" src="images/ipd/problemsolution.png"> 
+        <div class="col-md-12">
+          <p>My team and I set out to design an app that made grocery shopping easier. We discovered that many people don't take advantage of coupons because it takes so much time to find coupons relevant to you. See the works-like prototype of the app we designed <a href="http://hfid.olin.edu/sa2015/DeathByHypothermia/prototype/shopping_list.html">here</a> (designed for a mobile browser).</p>
         </div>
-        <div class="row">
-        <div class="col-md-4">
-          <p><h4>Problem:</h4>  Sam runs 5 days a week. Since he only does laundry every 2 weeks, he often wears running shorts multiple times. He doesn’t know where to put them after he wears them once, so they pile up on his floor and smell gross, especially after a few days.
-          </p>
-          <p><h4>Solution:</h4>  Intermediate Clothing Cleaning - remove smell and dampness so clothing can be worn again FreshGear allows already worn but not dirty clothing to dry out and return to freshness for re-wear. This also creates a 'home' for clothing worn once, previously homeless because users didn't want to put clothes back in a dresser with clean clothes, or in the hamper where they would get even dirtier.</p>
-        </div>
-        </div>
-        <hr></hr>
-        <div class="row">
-          <div class="col-md-4" >
+      </div>
+      <div class="row">
+          <div class="col-md-3" >
             <h3>User Research</h3>
              <p>"If my husbands cereal is on sale I'll buy a few boxes but I don't just buy anything thats on sale"</p><p>"It's a mom-of-the-house chore, gotta feed the family"</p><p>"I don't want to spend half an hour looking for a coupon that's gonna save 50 cents"</p>
              <p>A busy mom has no time to search for and clip coupons, but appreciates a good deal. She will occasionally buy discounted items but only if she thinks the item is going to keep her family happy and healthy. She would love to save more on groceries but doesn’t want to spend more effort on this chore.</p>
              </div>
-          <div class="col-md-4">            
+          <div class="col-md-5">
+            <img style="width:49%" src="images/hfid/PersonaTammy.jpg"> <img style="width:49%" src="images/hfid/PersonaPaul.jpg">
+          </div>
+          <div class="col-md-4">
             <h3>Personas</h3>
-            <p>The ideas was proposed as a sort of suit bag that treated clothing to reduce smell</p>
-            <p>One of our intermediate designs combined a dirty laundry hamper with a once-worn clothing container that included a UV light to kill smell-causing bacteria.</p>
-            <p>The final prototype eliminated UV light in order to keep the system energy passive and more user-friendly. Hangs over closet door to move clothes away from the floor, which is perceived as a place for dirty clothes. We built both a looks-like prototype shown here, as well as a works-like protoype that used silica gel to absorb moisture and activated charcoal to reduce semell.</p>
+            <p><b>Food-on-the-Table Tammy</b> was identified as our main persona because she plans her shopping before going into the store. Dealz for Mealz takes advantage of the effort she puts into making a list to find coupons for items she is already going to buy.</p>
+            <p>Our secondary persona, <b>Partially Planned Paul,</b> is 25 and shops only for himself. He goes into the store with a vague plan for a meal, but tends to organize the details of his shopping while in the store. He considers price while he shops, but isn’t organized enough to use coupons effectively. Because he doesn't do much planning before getting to the grocery store, he doesn't benefit from finding coupons through Dealz for Mealz</p>
           </div>
-          <div class="col-md-4">            
-            <h3>Iterative Design</h3>
-            <p>The ideas was proposed as a sort of suit bag that treated clothing to reduce smell</p>
-            <p>One of our intermediate designs combined a dirty laundry hamper with a once-worn clothing container that included a UV light to kill smell-causing bacteria.</p>
-            <p>The final prototype eliminated UV light in order to keep the system energy passive and more user-friendly. Hangs over closet door to move clothes away from the floor, which is perceived as a place for dirty clothes. We built both a looks-like prototype shown here, as well as a works-like protoype that used silica gel to absorb moisture and activated charcoal to reduce semell.</p>
-          </div>          
+      </div>
+<hr></hr>
+
+
+      <div class="row">
+        <div class="col-md-8">
+          <h3>Mapping the shopping experience</h3>
+          <img style="width:90%"  align="middle" src="images/hfid/storyboard.png"> 
+          <p> Sam runs 5 days a week. Since he only does laundry every 2 weeks, he often wears running shorts multiple times. He doesn’t know where to put them after he wears them once, so they pile up on his floor and smell gross, especially after a few days.
+          </p>
         </div>
-        <div class="row">
-          <div class="col-md-12" >
-            <img style="width:90%"  align="middle" src="images/ipd/iterativedesign.png">
-          </div>
+          <div class="col-md-4">            
+            <h3>Autonomy as a Need</h3>
+            <img style="width:90%" src="images/hfid/autonomy.png">
+            <p>Through user interviews and paper prototype testing, we discovered that Tammy needs a shopping app that is as unintrusive as possible. She is a "shopping expert" and knows exactly what kind of granola bars her kids will eat. She makes split second choices about items based on her knowlege of her family's tastes that no app can completely predict.</p>
+            <p>To allow Tammy to be the shopping expert we designed the app to give her as much autonomy as possible. For example, when making a list the app handles item entry by only suggesting specific brands if there are available coupons, and never forces the user to choose a brand or size or flavor so that decisions can be made at the store.</p>
+          </div>          
         </div>
         <hr></hr>
         <div class="row">
