--- a/hfid.html
+++ b/hfid.html
@@ -77,7 +77,7 @@
         <div class="col-md-8">
           <h3>Mapping the shopping experience</h3>
           <img style="width:90%"  align="middle" src="images/hfid/storyboard.png"> 
-          <p> Sam runs 5 days a week. Since he only does laundry every 2 weeks, he often wears running shorts multiple times. He doesn’t know where to put them after he wears them once, so they pile up on his floor and smell gross, especially after a few days.
+          <p> Tammy's shopping planning begins at home when she surveys what food she needs and makes a list. She only goes down aisles she knows she needs food from. Paul's shopping planning begins on the way to the store when he thinks about what he wants for dinner. He chooses items as he wanders through the store.
           </p>
         </div>
           <div class="col-md-4">            
