--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Casey Monahan</h1>
-        caseymariemonahan@gmail.com
+        caseymariemonahan at gmail dot com
       </div>
     </div>
 
