--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h2>About Casey</h2>
             <p>Casey is an engineer, designer, and environmentalist living in New York. She graduated from Olin College in December 2014 where she majored in Sustainable Design Engineering, with a humanities concentration in printmaking. She enjoys vegetarian cooking and playing rugby.</p>
             <p>Casey is looking for employment in sustainability or design in Boston or New York City.</p>
-            <p>Get in touch with Casey at caseymariemonahan@gmail.com</p>
+            <p>Get in touch with Casey at caseymariemonahan at gmail dot com</p>
             <a href="resume.html">Resume</a>
           </div>
         </div>
